--- a/Redmine.ManagerWPF/Views/MainWindow.xaml
+++ b/Redmine.ManagerWPF/Views/MainWindow.xaml
@@ -7,14 +7,23 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.modernwpf.com/2019"
     xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
-    Title="MainWindow"
-    Width="800"
-    Height="450"
+    xmlns:treeModels="clr-namespace:Redmine.ManagerWPF.Desktop.Models.Tree"
+    xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+    xmlns:Behaviors="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:customBehaviors="clr-namespace:Redmine.ManagerWPF.Desktop.Behaviors"
+    xmlns:uc="clr-namespace:Redmine.ManagerWPF.Desktop.Views.UserControls"
+    Title="Redmine Manager"
+    Width="1000"
+    MinHeight="650"
+    MinWidth="800"
     ui:WindowHelper.UseModernWindowStyle="True"
     mc:Ignorable="d">
     <Window.DataContext>
         <vm:MainWindowViewModel />
     </Window.DataContext>
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -25,7 +34,7 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <DockPanel>
+        <DockPanel Grid.ColumnSpan="2">
             <Menu DockPanel.Dock="Top">
                 <MenuItem Header="_Synchronizacja">
                     <MenuItem Command="{Binding SynchronizeProjectsCommand}" Header="_Synchronizuj projekty" />
@@ -36,47 +45,78 @@
                 </MenuItem>
             </Menu>
         </DockPanel>
-        <StackPanel
+        <Grid
             Grid.Row="1"
-            Grid.Column="0"
-            HorizontalAlignment="Stretch"
-            Orientation="Horizontal">
-            <TextBlock FontSize="30" Text="Projekt:" />
+            Grid.Column="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" VerticalAlignment="Center" FontSize="30" Margin="10,0,0,0" Text="Projekt:" />
             <ComboBox
-                MinWidth="300"
-                Margin="10,0,0,0"
+                x:Name="projectComboBox"
                 HorizontalAlignment="Stretch"
-                VerticalAlignment="Center">
-
+                Margin="10,10,10,0"
+                MinWidth="200"
+                Grid.Column="1"
+                VerticalAlignment="Center"
+                SelectedItem="{Binding SelectedProject, Mode=TwoWay}"
+                ItemsSource="{Binding Projects}">
+                <Behaviors:Interaction.Triggers>
+                    <Behaviors:EventTrigger EventName="SelectionChanged" SourceObject="{Binding ElementName=projectComboBox}">
+                        <Behaviors:InvokeCommandAction Command="{Binding LoadIssuesForProjectAsyncCommand}"/>
+                    </Behaviors:EventTrigger>
+                    <Behaviors:EventTrigger EventName="Loaded" SourceObject="{Binding ElementName=projectComboBox}">
+                        <Behaviors:InvokeCommandAction Command="{Binding LoadProjectsAsyncCommand}"/>
+                    </Behaviors:EventTrigger>
+                    <Behaviors:EventTrigger EventName="DropDownOpened" SourceObject="{Binding ElementName=projectComboBox}">
+                        <Behaviors:InvokeCommandAction Command="{Binding LoadProjectsAsyncCommand}"/>
+                    </Behaviors:EventTrigger>
+                </Behaviors:Interaction.Triggers>   
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel>
                             <TextBlock
                                 Margin="0,0,0,10"
                                 FontSize="14"
-                                FontWeight="Bold" />
+                                FontWeight="Bold" 
+                                Text="{Binding Name}"/>
                             <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
                                 <TextBlock FontSize="12" Text="Data rozpoczęcia:" />
-                                <TextBlock FontSize="12" />
+                                <TextBlock FontSize="12" Margin="10,0,0,0" Text="{Binding DataStart}"/>
                             </StackPanel>
                         </StackPanel>
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
-        </StackPanel>
-        <!--<muxc:TreeView
-            Grid.Row="2"
+        </Grid>
+        <TreeView
+            BorderBrush="Black"
+            BorderThickness="1"
+             Grid.Row="2"
             Grid.Column="0"
             MinHeight="400"
+            Margin="10"
             VerticalAlignment="Stretch"
-            ItemsSource="{x:Bind ViewModel.Issues}"
-            SelectedItem="{x:Bind ViewModel.SelectedNode, Mode=TwoWay}">
-            <muxc:TreeView.ItemTemplate>
-                <DataTemplate x:DataType="treeModels:TreeModel">
-                    <muxc:TreeViewItem Content="{x:Bind Name}" ItemsSource="{x:Bind Children}" />
-                </DataTemplate>
-            </muxc:TreeView.ItemTemplate>
-        </muxc:TreeView>
-        <uc:IssueForm Grid.Row="2" Grid.Column="1" />-->
+            ItemsSource="{Binding Issues}">
+            <i:Interaction.Behaviors>
+                <customBehaviors:TreeViewBehavior/>
+            </i:Interaction.Behaviors>
+            <TreeView.ItemTemplate>
+                <HierarchicalDataTemplate DataType="{x:Type treeModels:TreeModel}" ItemsSource="{Binding Children}">
+                    <TextBlock Text="{Binding Name}" />
+                </HierarchicalDataTemplate>
+            </TreeView.ItemTemplate>
+        </TreeView>
+        <Grid Grid.Row="1" Grid.Column="1" Visibility="{Binding ViewProjectDetails, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <uc:ProjectShortInfo VerticalAlignment="Center" Margin="0,10,0,10"/>
+        </Grid>
+        <Grid Grid.Row="2" Grid.Column="1" Visibility="{Binding ViewIssueDetails, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <uc:IssueForm Margin="0,10,0,10"  />
+        </Grid>
+        <Grid Grid.Row="2" Grid.Column="1" Visibility="{Binding ViewCommentDetails, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <uc:CommentForm Margin="0,10,0,10"  />
+        </Grid>
+       
     </Grid>
 </Window>
