Progress. Add time interval list and service.

--- a/Redmine.ManagerWPF/Views/UserControls/IssueForm.xaml
+++ b/Redmine.ManagerWPF/Views/UserControls/IssueForm.xaml
@@ -10,7 +10,7 @@
     <UserControl.DataContext>
         <vm:IssueFormViewModel x:Name="ViewModel" />
     </UserControl.DataContext>
-    <Grid>
+    <Grid MaxHeight="400">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
