--- a/Redmine.ManagerWPF/Views/MainWindow.xaml
+++ b/Redmine.ManagerWPF/Views/MainWindow.xaml
@@ -28,6 +28,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -94,7 +95,8 @@
         <TreeView
             BorderBrush="Black"
             BorderThickness="1"
-             Grid.Row="2"
+            Grid.Row="2"
+            Grid.RowSpan="2"
             Grid.Column="0"
             MinHeight="400"
             Margin="10"
@@ -118,6 +120,10 @@
         <Grid Grid.Row="2" Grid.Column="1" Visibility="{Binding ViewCommentDetails, Converter={StaticResource BooleanToVisibilityConverter}}">
             <uc:CommentForm Margin="0,10,0,10"  />
         </Grid>
-       
+        <Grid Grid.Row="3" Grid.Column="1" Visibility="{Binding ViewTimeIntervalList, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <ScrollViewer>
+                <uc:TimeIntervalList Margin="0,10,0,10"  />
+            </ScrollViewer>
+        </Grid>
     </Grid>
 </Window>
