--- a/Redmine.ManagerWPF/Views/MainWindow.xaml
+++ b/Redmine.ManagerWPF/Views/MainWindow.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Redmine.ManagerWPF"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.modernwpf.com/2019"
     xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
@@ -17,10 +16,13 @@
     MinHeight="650"
     MinWidth="800"
     ui:WindowHelper.UseModernWindowStyle="True"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    WindowStartupLocation="CenterScreen"
+    Closing="Window_Closing">
     <Window.DataContext>
         <vm:MainWindowViewModel />
     </Window.DataContext>
+
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </Window.Resources>
@@ -43,6 +45,9 @@
                 </MenuItem>
                 <MenuItem Header="_Opcje">
                     <MenuItem Command="{Binding OpenSettingsDialogCommand}" Header="_Ustawienia" />
+                </MenuItem>
+                <MenuItem Header="_Raporty">
+                    <MenuItem Command="{Binding OpenDailyRaportDialogCommand}" Header="_Dzienny raport" />
                 </MenuItem>
             </Menu>
         </DockPanel>
@@ -74,7 +79,7 @@
                     <Behaviors:EventTrigger EventName="DropDownOpened" SourceObject="{Binding ElementName=projectComboBox}">
                         <Behaviors:InvokeCommandAction Command="{Binding LoadProjectsAsyncCommand}"/>
                     </Behaviors:EventTrigger>
-                </Behaviors:Interaction.Triggers>   
+                </Behaviors:Interaction.Triggers>
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel>
