--- a/Redmine.ManagerWPF/Views/UserControls/CommentForm.xaml
+++ b/Redmine.ManagerWPF/Views/UserControls/CommentForm.xaml
@@ -5,14 +5,22 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Redmine.ManagerWPF.Desktop.Views.UserControls"
              xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
+             xmlns:conv="clr-namespace:Redmine.ManagerWPF.Desktop.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
         <vm:CommentFormViewModel />
     </UserControl.DataContext>
+
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+            <conv:InvertableBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter"/>
+        </ResourceDictionary>
+    </UserControl.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -23,25 +31,42 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Row="0" Text="Nazwa użytkownika:" Margin="5,10,10,0" />
-        <TextBox Grid.Row="1" Margin="5,0,10,0" Text="{Binding CommentFormModel.CreatedBy, Mode=TwoWay}" />
-        <TextBlock
+        <Grid Grid.ColumnSpan="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Row="0" Text="Nazwa użytkownika:" Margin="5,10,10,0" />
+            <TextBox Grid.Row="1" Margin="5,0,10,0" Text="{Binding CommentFormModel.CreatedBy, Mode=TwoWay}" />
+            <TextBlock
             Grid.Row="0"
             Grid.Column="1"
             Margin="5,10,10,0"
             Text="Status:" />
-        <TextBox
+            <TextBox
             Grid.Row="1"
             Grid.Column="1"
             Margin="5,0,10,0"
             Text="{Binding CommentFormModel.Status, Mode=TwoWay}" />
+            <Button Command="{Binding SetAsDoneCommand}" Visibility="{Binding CommentFormModel.Done, Converter={StaticResource InverseBooleanToVisibilityConverter}}" Margin="0,0,10,0" VerticalAlignment="Center" Grid.Row="1"  Grid.Column="2">
+                <TextBlock Text="Wykonane" TextWrapping="Wrap" />
+            </Button>
+            <Button Command="{Binding SetAsUndoneCommand}" Visibility="{Binding CommentFormModel.Done, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="0,0,10,0" VerticalAlignment="Center" Grid.Row="1"  Grid.Column="2">
+                <TextBlock Text="Niewykonane" TextWrapping="Wrap" />
+            </Button>
+        </Grid>
         <TextBlock
-            Grid.Row="2"
+            Grid.Row="1"
             Grid.ColumnSpan="2"
             Margin="5,10,10,0"
             Text="Treść:" />
         <TextBox
-            Grid.Row="3"
+            Grid.Row="2"
             Grid.ColumnSpan="2"
             MaxHeight="250"
             Margin="5,0,10,0"
@@ -49,11 +74,11 @@
             Text="{Binding CommentFormModel.Text, Mode=TwoWay}"
             TextWrapping="Wrap" />
         <TextBlock
-            Grid.Row="4"
+            Grid.Row="3"
             Margin="5,10,10,0"
             Grid.ColumnSpan="2"
             Text="Link:" />
-        <Grid Grid.Row="5"
+        <Grid Grid.Row="4"
             Grid.ColumnSpan="2"
             Margin="5,0,10,0">
             <Grid.ColumnDefinitions>
