--- a/Redmine.ManagerWPF/Views/ContentDialogs/DailyRaport.xaml
+++ b/Redmine.ManagerWPF/Views/ContentDialogs/DailyRaport.xaml
@@ -8,20 +8,79 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.modernwpf.com/2019"
     xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
+    xmlns:dailyRaports="clr-namespace:Redmine.ManagerWPF.Desktop.Models.DailyRaport"
     Title="Raport dzienny"
-    d:DesignHeight="550"
-    d:DesignWidth="800"
+    Width="Auto"
     PrimaryButtonText="Ok"
     mc:Ignorable="d">
     <ui:ContentDialog.DataContext>
-        <vm:SettingsViewModel />
+        <vm:DailyRaportViewModel />
     </ui:ContentDialog.DataContext>
+
     <ui:ContentDialog.Resources>
         <ResourceDictionary>
-            <conv:BoolToColorConverter x:Key="BoolToColorConverter" />
+            <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+            <conv:InvertableBooleanToVisibilityConverter x:Key="InvertableBooleanToVisibilityConverter" />
+            <conv:IsTimeIntervalTypeConverter x:Key="IsTimeIntervalTypeConverter" />
+            <conv:IsEverythingElseThanTimeIntervalConverter x:Key="IsEverythingElseThanTimeIntervalConverter" />
+            <conv:StringToVIsibilityConverter x:Key="StringToVIsibilityConverter" />
         </ResourceDictionary>
     </ui:ContentDialog.Resources>
-    <Grid MinWidth="450">
-        
+
+    <Grid Width="480" MaxHeight="600">
+        <ProgressBar IsIndeterminate="True" Visibility="{Binding DataLoading, Converter={StaticResource BooleanToVisibilityConverter}}" />
+
+        <TreeView
+            FontSize="12"
+            BorderBrush="Black"
+            BorderThickness="1"
+            VerticalAlignment="Stretch"
+            Visibility="{Binding DataLoading, Converter={StaticResource InvertableBooleanToVisibilityConverter}}"
+            ItemsSource="{Binding RaportData}">
+            <TreeView.ItemTemplate>
+                <HierarchicalDataTemplate DataType="{x:Type dailyRaports:ProjectListItemModel}" ItemsSource="{Binding Childrens}">
+                    <Grid>
+                        <Grid HorizontalAlignment="Stretch" Visibility="{Binding Type, Converter={StaticResource IsEverythingElseThanTimeIntervalConverter}}">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock FontSize="13" FontWeight="Bold" Grid.Column="0" Text="{Binding Name}" />
+                            <StackPanel Grid.Column="1" Orientation="Horizontal">
+                                <TextBlock FontSize="12" Margin="50,0,0,0" Text="Czas całkowity:"/>
+                                <TextBlock FontSize="12"  Margin="5,0,0,0" Text="{Binding TotalTime}" />
+                            </StackPanel>
+                        </Grid>
+                        <Grid Visibility="{Binding Type, Converter={StaticResource IsTimeIntervalTypeConverter}}" Margin="0,0,0,10">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal">
+                                <TextBlock FontSize="13" FontWeight="SemiBold"  Text="Start:"/>
+                                <TextBlock FontSize="12" Margin="5,0,0,0" Text="{Binding Path=StartDate, StringFormat=dd.MM.yyyy HH:mm:ss}" />
+                            </StackPanel>
+                            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
+                                <TextBlock FontSize="12" FontWeight="SemiBold" Margin="10,0,0,0" Text="Stop:"/>
+                                <TextBlock FontSize="12" Margin="5,0,0,0" Text="{Binding Path=EndDate, StringFormat=dd.MM.yyyy HH:mm:ss}" />
+                            </StackPanel>
+                            <StackPanel Margin="0,10,0,0" Grid.Column="0" Grid.Row="1" Orientation="Horizontal">
+                                <TextBlock FontSize="13" FontWeight="SemiBold"  Text="Czas całkowity:"/>
+                                <TextBlock FontSize="12" Margin="5,0,0,0" Text="{Binding Time}" />
+                            </StackPanel>
+                            <StackPanel  Margin="0,10,0,0" Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Visibility="{Binding ToComment, Converter={StaticResource StringToVIsibilityConverter}}">
+                                <TextBlock FontSize="13" FontWeight="SemiBold" Margin="10,0,0,0" Text="Do komentarza:"/>
+                                <TextBlock FontSize="12" Margin="5,0,0,0" TextWrapping="Wrap" Text="{Binding ToComment}" />
+                            </StackPanel>
+                        </Grid>
+                    </Grid>
+                </HierarchicalDataTemplate>
+            </TreeView.ItemTemplate>
+        </TreeView>
+
     </Grid>
 </ui:ContentDialog>
