--- a/Redmine.ManagerWPF/Views/ContentDialogs/SynchronizeProjects.xaml
+++ b/Redmine.ManagerWPF/Views/ContentDialogs/SynchronizeProjects.xaml
@@ -6,9 +6,10 @@
                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                   xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
                    xmlns:Behaviors="http://schemas.microsoft.com/xaml/behaviors"
-                  mc:Ignorable="d" 
+                  mc:Ignorable="d"
                   Title="Synchronizacja projektów"
              d:DesignHeight="200" d:DesignWidth="400"
+                  PrimaryButtonCommand="{Binding SynchronizeProjectsCommand}"
                   CloseButtonText="{Binding CancelButtonText}"
                   CloseButtonCommand="{Binding CancelCommand}"
                   PrimaryButtonText="{Binding PrimaryButtonText}"
@@ -19,28 +20,24 @@
     <ui:ContentDialog.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </ui:ContentDialog.Resources>
-    <Behaviors:Interaction.Triggers>
-        <Behaviors:EventTrigger EventName="Loaded">
-            <Behaviors:InvokeCommandAction Command="{Binding SynchronizeProjectsCommand}"/>
-        </Behaviors:EventTrigger>
-    </Behaviors:Interaction.Triggers>
+
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <ui:ProgressBar
                     IsIndeterminate="False"
                     VerticalAlignment="Center"
                     Value="{Binding ProgressBarValue}"
-                    Margin="0,0,0,10"/>
+                    Margin="0,0,0,10" />
         <StackPanel Grid.Row="1" Orientation="Horizontal">
-            <TextBlock Text="Zsynchronizowano:"/>
-            <TextBlock Margin="5,0,5,0" Text="{Binding Value}"/>
-            <TextBlock Text="/"/>
-            <TextBlock Margin="5,0,0,0" Text="{Binding TotalProjectsCount}"/>
+            <TextBlock Text="Zsynchronizowano:" />
+            <TextBlock Margin="5,0,5,0" Text="{Binding Value}" />
+            <TextBlock Text="/" />
+            <TextBlock Margin="5,0,0,0" Text="{Binding TotalProjectsCount}" />
         </StackPanel>
-        <TextBlock Margin="0,10,0,0" Foreground="Green" Visibility="{Binding ShowOk, Converter={StaticResource BooleanToVisibilityConverter}}"  Grid.Row="2" Text="Synchronizacja zakończona powodzeniem."/>
+        <TextBlock Margin="0,10,0,0" Foreground="Green" Visibility="{Binding ShowOk, Converter={StaticResource BooleanToVisibilityConverter}}"  Grid.Row="2" Text="Synchronizacja zakończona powodzeniem." />
     </Grid>
 </ui:ContentDialog>
